fix(ci): remove explicit pnpm version - use packageManager from package.json
pnpm/action-setup@v4 automatically reads version from package.json
packageManager field (pnpm@9.15.9)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,42 +3,26 @@ name: Build App
 on:
   push:
     tags:
-      - 'v*' # Trigger on version tags
-  workflow_dispatch: # Allow manual trigger
+      - 'v*'
+  workflow_dispatch:
 
 env:
   NODE_VERSION: '20'
-  PNPM_VERSION: '9'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
         with:
-          version: ${{ env.PNPM_VERSION }}
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: \${{ env.NODE_VERSION }}
           cache: 'pnpm'
-
-      - name: Setup EAS
-        uses: expo/expo-github-action@v8
+      - uses: expo/expo-github-action@v8
         with:
           eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Build Android
-        run: eas build --platform android --profile production --non-interactive
-
-      - name: Build iOS
-        run: eas build --platform ios --profile production --non-interactive
+          token: \${{ secrets.EXPO_TOKEN }}
+      - run: pnpm install --frozen-lockfile
+      - run: eas build --platform android --profile production --non-interactive
+      - run: eas build --platform ios --profile production --non-interactive
