--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@eslint/js": "^9.39.2",
     "@faker-js/faker": "^10.1.0",
     "@supabase/supabase-js": "^2.88.0",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
@@ -74,7 +75,8 @@
     "supabase": "^2.67.2",
     "tsx": "^4.21.0",
     "turbo": "^2.6.3",
-    "typescript": "~5.9.3"
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.50.0"
   },
   "engines": {
     "node": ">=18.0.0",
