feat(mobile): complete Sentry integration with wizard
- Configure @sentry/react-native with Session Replay, Feedback Widget, and Logs
- Add metro.config.js with Sentry source map support
- Update app.config.ts with Sentry plugin for source maps upload
- Update iOS pods for Sentry

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "packageManager": "pnpm@9.15.9",
   "dependencies": {
+    "@sentry/react-native": "~7.8.0",
     "expo": "~54.0.29",
     "metro": "0.83.3",
     "metro-cache": "0.83.3",
