--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,15 +31,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v1.0.20
+        uses: Infisical/secrets-action@v1.0.15
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
-          project-id: cafe77a6-a1d6-4725-89d4-e1ec88c0f2b9
-          environment: ${{ github.ref_name == 'main' && 'production' || 'staging' }}
-      
+          project-slug: travelmatch
+          env-slug: ${{ github.ref_name == 'main' && 'prod' || 'dev' }}
+        continue-on-error: true
+
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
@@ -52,7 +53,7 @@ jobs:
         with:
           file: ./coverage/lcov.info
           fail_ci_if_error: false
-          token: ${{ env.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   build:
     name: Build Check
