feat: re-enable workflows with Codecov & Snyk support
- Re-enable accessibility-audit.yml with pa11y
- Re-enable load-test.yml with k6 (conditional on test files)
- Re-enable infrastructure-test.yml for config validation
- Re-enable security-rls-tests.yml with graceful fallback
- Add Snyk security scanning to security-scan.yml
- Remove deprecated workflows from _disabled folder
- All workflows have continue-on-error for graceful failures

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -53,6 +53,34 @@ jobs:
         run: pnpm audit --audit-level=critical || true
         continue-on-error: true
 
+  snyk-scan:
+    name: Snyk Security Scan
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+        continue-on-error: true
+
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high --all-projects
+
   code-security:
     name: Code Security Analysis
     runs-on: ubuntu-latest
