feat(ci): enable GitHub Environments for secure deployments
- Enable 'staging' environment for staging deployments
- Enable 'production' environment with required approval
- Remove obsolete BRANCH_PROTECTION.md (now configured via API)

Branch protection rules now active:
- PR required for main branch
- 1 approval required
- Stale reviews dismissed
- build-and-test must pass

--- a/.github/workflows/database-migrations.yml
+++ b/.github/workflows/database-migrations.yml
@@ -101,7 +101,7 @@ jobs:
     needs: [validate-migrations, check-rls-policies]
     if: github.event.inputs.environment == 'staging' || github.event_name == 'push'
     runs-on: ubuntu-latest
-    # environment: staging  # Enable after creating GitHub Environment
+    environment: staging
     steps:
       - uses: actions/checkout@v4
 
@@ -143,7 +143,7 @@ jobs:
     needs: [validate-migrations, check-rls-policies]
     if: github.event.inputs.environment == 'production'
     runs-on: ubuntu-latest
-    # environment: production  # Enable after creating GitHub Environment
+    environment: production
     steps:
       - uses: actions/checkout@v4
 
