--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "overrides": {
       "react": "19.1.0",
       "react-dom": "19.1.0",
-      "react-native": "0.81.5"
+      "react-native": "0.81.5",
+      "fast-xml-parser": "^5.3.3"
     }
   }
 }
