feat: Codecov integration (Coverage, Bundle Analysis, Test Analytics)
- Add jest-junit reporter to mobile, shared, design-system packages
- Configure Codecov webpack plugin for Next.js bundle analysis
- Update CI workflow with Codecov coverage and test results upload
- Add codecov.yml with project-specific coverage targets
- Fix tsconfig.json configurations (root and mobile)
- Configure VS Code Jest monorepo settings
- Clean up unused HomeScreen references (DiscoverScreen is main screen)
- Update ESLint working directories configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,12 +12,20 @@
   // Ignore errors from node_modules (package internal configs)
   "typescript.validate.enable": true,
 
+  // Jest - Monorepo configuration
+  // This settings file is for root folder - Jest is disabled here
+  // Each sub-project should be opened separately OR use workspace file
+  "jest.enable": false,
+  "jest.autoRun": "off",
+  "jest.runMode": "on-demand",
+
   // ESLint
   "eslint.workingDirectories": [
-    "./apps/mobile",
-    "./admin",
-    "./packages/design-system",
-    "./packages/shared"
+    { "directory": "apps/mobile", "changeProcessCWD": true },
+    { "directory": "apps/admin", "changeProcessCWD": true },
+    { "directory": "apps/web", "changeProcessCWD": true },
+    { "directory": "packages/design-system", "changeProcessCWD": true },
+    { "directory": "packages/shared", "changeProcessCWD": true }
   ],
 
   // Files - exclude from search/watch
@@ -27,7 +35,7 @@
     "**/node_modules": true,
     "**/.turbo": true
   },
-  
+
   // Search - exclude node_modules from search
   "search.exclude": {
     "**/node_modules": true,
@@ -36,10 +44,10 @@
     "**/dist": true,
     "**/build": true
   },
-  
+
   // Python
   "python.analysis.typeCheckingMode": "strict",
-  
+
   // GitHub Actions
   "yaml.schemas": {
     "https://json.schemastore.org/github-workflow.json": ".github/workflows/*.yml"
