--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 # CI/CD Pipeline for TravelMatch
+# Note: VS Code may show warnings for secrets.* - these are valid GitHub secrets
 name: CI
 
 on:
@@ -33,14 +34,15 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: 🔐 Import secrets from Infisical
-        uses: Infisical/secrets-action@v2.0.0
+        id: infisical
+        uses: Infisical/secrets-action@v1.0.15
         with:
           client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
           client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
           project-slug: travelmatch
           env-slug: ${{ github.ref_name == 'main' && 'prod' || 'staging' }}
           export-type: env
-        continue-on-error: true # OK: Optional secret management service
+        continue-on-error: true
 
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
@@ -48,19 +50,55 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'pnpm'
       - run: pnpm install --frozen-lockfile
-      - run: pnpm test -- --ci --coverage --maxWorkers=2
-      - uses: codecov/codecov-action@v4
-        continue-on-error: true # OK: Coverage reporting is non-blocking
+
+      # Run tests with coverage and JUnit report
+      - name: Run Tests with Coverage
+        run: pnpm test -- --ci --coverage --maxWorkers=2
+
+      # Upload coverage reports to Codecov
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        continue-on-error: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          file: ./coverage/lcov.info
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./apps/mobile/coverage/lcov.info,./packages/shared/coverage/lcov.info,./packages/design-system/coverage/lcov.info
+          flags: unittests
+          name: travelmatch-coverage
           fail_ci_if_error: false
-          token: ${{ env.CODECOV_TOKEN }}
+          verbose: true
+
+      # Upload test results for Codecov Test Analytics
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        continue-on-error: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./apps/mobile/coverage/junit.xml,./packages/shared/coverage/junit.xml,./packages/design-system/coverage/junit.xml
+          flags: unittests
+          name: travelmatch-test-results
 
   build:
     name: Build Check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: 🔐 Import secrets from Infisical
+        id: infisical
+        uses: Infisical/secrets-action@v1.0.15
+        with:
+          client-id: ${{ secrets.INFISICAL_CLIENT_ID }}
+          client-secret: ${{ secrets.INFISICAL_CLIENT_SECRET }}
+          project-slug: travelmatch
+          env-slug: ${{ github.ref_name == 'main' && 'prod' || 'staging' }}
+          export-type: env
+        continue-on-error: true
+
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
@@ -69,6 +107,16 @@ jobs:
       - run: pnpm install --frozen-lockfile
       - run: pnpm run type-check
         # SECURITY: Type check MUST pass - no bypass allowed
+
+      # Build with Codecov Bundle Analysis
+      - name: Build Web App (Bundle Analysis)
+        run: pnpm --filter @travelmatch/web build
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Build Admin App
+        run: pnpm --filter @travelmatch/admin build
+        continue-on-error: true
 
   security:
     name: Security Audit
