--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "@babel/preset-env": "^7.24.0",
+    "@codecov/webpack-plugin": "^1.9.1",
     "@faker-js/faker": "^9.3.0",
     "@supabase/supabase-js": "^2.39.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -69,6 +70,7 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.10.2",
     "husky": "^9.1.7",
+    "jest-junit": "^16.0.0",
     "lint-staged": "^16.2.7",
     "openai": "^6.10.0",
     "prettier": "^2.8.8",
