--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": [
-      "ES2020",
-      "DOM"
-    ],
-    "jsx": "react",
+    "lib": ["ES2020", "DOM"],
+    "jsx": "react-jsx",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
@@ -24,20 +21,8 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "build",
-    "supabase/functions/**",
-    ".next",
-    ".expo",
-    "android",
-    "ios"
-  ],
-  "extends": "expo/tsconfig.base"
+  "exclude": ["node_modules", "dist", "build", "supabase/functions/**", ".next", ".expo", "android", "ios"]
 }
