--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -4,7 +4,13 @@
     "appVersionSource": "remote"
   },
   "build": {
+    "base": {
+      "ios": {
+        "image": "latest"
+      }
+    },
     "development": {
+      "extends": "base",
       "developmentClient": true,
       "distribution": "internal",
       "ios": {
@@ -18,6 +24,7 @@
       }
     },
     "preview": {
+      "extends": "base",
       "distribution": "internal",
       "channel": "preview",
       "ios": {
@@ -31,7 +38,7 @@
       }
     },
     "production": {
-      "channel": "production",
+      "extends": "base",
       "autoIncrement": true,
       "ios": {
         "resourceClass": "m-medium"
@@ -40,19 +47,15 @@
         "buildType": "app-bundle"
       },
       "env": {
-        "APP_ENV": "production",
-        "SENTRY_ORG": "${SENTRY_ORG}",
-        "SENTRY_PROJECT": "${SENTRY_PROJECT}",
-        "SENTRY_AUTH_TOKEN": "${SENTRY_AUTH_TOKEN}"
+        "APP_ENV": "production"
       }
     }
   },
   "submit": {
     "production": {
       "ios": {
-        "appleId": "${APPLE_ID}",
-        "ascAppId": "${ASC_APP_ID}",
-        "appleTeamId": "${APPLE_TEAM_ID}"
+        "appleId": "hello@weareasocial.com",
+        "appleTeamId": "LVBFTMQ2MA"
       },
       "android": {
         "serviceAccountKeyPath": "./google-services.json",
