--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
+    "eas-build-pre-install": "bash eas-hooks/eas-build-pre-install.sh || true",
     "dev": "expo start",
     "start": "expo start",
     "android": "expo run:android",
@@ -77,6 +78,7 @@
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-tracking-transparency": "^6.0.8",
+    "expo-updates": "~29.0.15",
     "i18next": "^25.7.0",
     "pako": "^2.1.0",
     "posthog-react-native": "^4.14.3",
