--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.10.2",
+    "expo-module-scripts": "^5.0.8",
     "husky": "^9.1.7",
     "jest-junit": "^16.0.0",
     "lint-staged": "^16.2.7",
