--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020", "DOM"],
+    "lib": [
+      "ES2020",
+      "DOM"
+    ],
     "jsx": "react-jsx",
     "module": "ESNext",
     "moduleResolution": "bundler",
@@ -21,8 +24,20 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     }
   },
-  "exclude": ["node_modules", "dist", "build", "supabase/functions/**", ".next", ".expo", "android", "ios"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "build",
+    "supabase/functions/**",
+    ".next",
+    ".expo",
+    "android",
+    "ios"
+  ],
+  "extends": "expo/tsconfig.base"
 }
