chore: upgrade to ESLint 9 and Prettier 3
- Upgrade eslint to v9.39.2
- Upgrade typescript-eslint to v8.19.0
- Upgrade prettier to v3.4.2
- Remove deprecated @typescript-eslint/* packages
- Fix lint-staged compatibility issues

--- a/package.json
+++ b/package.json
@@ -62,24 +62,24 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@babel/preset-env": "^7.24.0",
     "@codecov/webpack-plugin": "^1.9.1",
+    "@eslint/js": "^9.17.0",
     "@faker-js/faker": "^9.3.0",
     "@supabase/supabase-js": "^2.39.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
     "dotenv": "^16.3.1",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^8.10.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^9.1.2",
     "expo-module-scripts": "^5.0.8",
     "husky": "^9.1.7",
     "jest-junit": "^16.0.0",
     "lint-staged": "^16.2.7",
     "openai": "^6.10.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.7.4",
     "stripe": "^20.0.0",
     "supabase": "^2.67.3",
     "tsx": "^4.7.0",
     "turbo": "^2.3.3",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.19.0"
   },
   "engines": {
     "node": ">=18.0.0",
