fix: production bug fixes for TestFlight build 10
- Fix front camera selfie flip issue (remove unnecessary horizontal flip)
- Fix moment creation with coordinates for location-based discovery
- Add ensureUserProfile to fix RLS policy failures for existing users
- Upgrade location picker to Mapbox Search Box API for better POI results
- Remove mock data from Wallet and Transaction History screens
- Fix My Gifts screen labels and alignment
- Add detailed logging for debugging
- Remove test scripts with hardcoded secrets
- Update .gitignore for security

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,15 @@ yarn-error.*
 coverage/
 .eslintcache
 apps/mobile/.eslintcache
+
+# ============================================
+# SECURITY: Test scripts with hardcoded secrets
+# ============================================
+scripts/fix-user.mjs
+scripts/test-moment-creation.ts
+scripts/*-test.ts
+scripts/*-debug.ts
+
 # ============================================
 # SECURITY: Environment files with secrets
 # ============================================
@@ -109,3 +118,4 @@ apps/**/pnpm-lock.yaml
 
 # Snyk Security Extension - AI Rules (auto-generated)
 .github/instructions/snyk_rules.instructions.md
+.eslintcache-mobile
