fix: skip postinstall scripts in EAS production build

--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -48,6 +48,9 @@
       },
       "env": {
         "APP_ENV": "production"
+      },
+      "node": {
+        "installCommand": "pnpm install --frozen-lockfile --ignore-scripts"
       }
     }
   },
